<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.szylarq.bmi.MainActivity">

    <item
        android:id="@+id/about_author"
        android:title="@string/about_author"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/metric_unit_item"
        android:orderInCategory="200"
        android:title="@string/metric_item"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/imperial_unit_item"
        android:orderInCategory="300"
        android:title="@string/imperial_item"
        android:visible="true"
        app:showAsAction="never" />
</menu>